			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04v: *********************************

IMP: EditWindow.getBlendingOrder don't put Generic.Gluph layer into blending order on solid layers.
     So essential bounds are not shown. 

IMP: EditWindow.getBlendingOrder uses LAYERS_BY_HEIGHT_LIFT_CONTACTS to sort layers.
    So every contact is higher than its upper metal. Requested by Jonathan Gainsley.

IMP/MAN: (7/30/06, DN) "Alpha blending limit" preference renamed to "Alpha blending overcolor limit".
    When zooming out below this limit, standard alpha blending composition rule is used.
    When zooming in above this scale, alphablending with overcolor composituin rule (as inMagic editor) is used.

BUG: (7/31/06, DN) Layer redisplay doesn't take stipple patterns from Cadence preferences (Bug #1190).
FIX: Add call of "setPatternLow" to "EGraphics.setLayer" and "EGraphics.recachePrefs" so that
     it updates "reversedPatterned".

IMP/MAN: (7/31/06, GVG) Colapsing pin names like vdd_*/gnd_* in vdd/gnd while exporting in GDS (Bug #1188).
This is for Fire/Ice extraction tool. A new flag in User GDS tab was added.

BUG: (7/31/06, DN) Deep zoom in can crash X11 servers because of large text.
FIX: In LayerDrawing.drawText limit text size to MAXIMUMTEXTSIZE = 200.

************************* Version 8.04u: *********************************

BUG: (7/30/06, DN) Layer outlines sometimes missing with new display algorithm (Bug #1187).
FIX: In LayerDrawing.expendedCellCached change "cell is too large" threshold from 1/2 to 1/32.
    This expands range of scales when outlines are visible.

IMP/MAN: (7/30/06, DN) "Alpha blending limit" preference is added to DisplayControlTab.
    When zooming out below this limit, an alpha blending composition rule (with opacity controlas) is used.