@@ -4,10 +4,13 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04v: *********************************
 
-IMP: EditWindow.getBlendingOrder don't put Generic.Gluph layer into blending order on solid layers.
+IMP: (8/3/06, GVG) Different message dialogs in case of XML errors while importing DRC deck. Printing only parser
+error in case of problems, not full trace.
+
+IMP: (8/1/06, DN) EditWindow.getBlendingOrder don't put Generic.Gluph layer into blending order on solid layers.
      So essential bounds are not shown. 
 
-IMP: EditWindow.getBlendingOrder uses LAYERS_BY_HEIGHT_LIFT_CONTACTS to sort layers.
+IMP: (8/1/06, DN) EditWindow.getBlendingOrder uses LAYERS_BY_HEIGHT_LIFT_CONTACTS to sort layers.
     So every contact is higher than its upper metal. Requested by Jonathan Gainsley.
 
 IMP/MAN: (7/30/06, DN) "Alpha blending limit" preference renamed to "Alpha blending overcolor limit".
